# nv-redfish

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
bmc-http/: Cargo.toml  build.rs
bmc-http/src/: cache.rs  credentials.rs  lib.rs  reqwest.rs
bmc-http/tests/: common.rs  etag_cache_tests.rs  event_stream_tests.rs  reqwest_client_tests.rs
bmc-mock/: Cargo.toml
bmc-mock/src/: lib.rs
core/: Cargo.toml
core/src/: action.rs  bmc.rs  cache.rs  deserialize.rs  edm_date_time_offset.rs  edm_duration.rs  edm_primitive_type.rs  http.rs  lib.rs  nav_property.rs  odata.rs  query.rs
core/tests/: common.rs  etag_cache_tests.rs  reqwest_client_tests.rs
csdl-compiler/: Cargo.toml
csdl-compiler/examples/: csdl-parser.rs  schema-compilation.rs  schema-rust-gen.rs
csdl-compiler/src/: commands.rs  edmx.rs  error.rs  features_manifest.rs  lib.rs  main.rs
csdl-compiler/src/compiler/: action.rs  compile_traits.rs  compiled.rs  compiled_complex_type.rs  compiled_entity_type.rs  compiled_properties.rs  compiled_singleton.rs  complex_type.rs  context.rs  entity_type.rs  enum_type.rs  error.rs  mod.rs  namespace.rs  odata.rs  parameter.rs  properties.rs  qualified_name.rs  redfish.rs  schema_index.rs  singleton.rs  stack.rs  traits.rs  type_definition.rs
csdl-compiler/src/edmx/: action.rs  annotation.rs  attribute_values.rs  complex_type.rs  data_services.rs  edmx_root.rs  entity_type.rs  enum_type.rs  mod.rs  property.rs  reference.rs  schema.rs  validate_error.rs
csdl-compiler/src/generator/: casemungler.rs  converter.rs  mod.rs
csdl-compiler/src/generator/rust/: config.rs  doc.rs  enum_def.rs  full_type_name.rs  mod.rs  mod_def.rs  mod_name.rs  property_name.rs  simple_def.rs  struct_def.rs  type_def.rs  type_name.rs
csdl-compiler/src/generator/rust/mod_def/: mod.rs  name.rs
csdl-compiler/src/generator/rust/struct_def/: mod.rs  name.rs  tests.rs
csdl-compiler/src/odata/: annotations.rs
csdl-compiler/src/optimizer/: mod.rs  prune_complex_type_inheritance.rs  prune_entity_type_inheritance.rs  remove_empty_complex_types.rs  remove_empty_entity_types.rs
csdl-compiler/src/optimizer/prune_namespaces/: complex_types.rs  entity_types.rs  enum_types.rs  mod.rs  simple_types.rs  type_definitions.rs
csdl-compiler/src/redfish/: annotations.rs
csdl-compiler/tests/: test-redfish-schema-parser.rs  test-schema-compilation.rs  test-schema-rust-gen.rs
dispatcher/src/: event.rs  lib.rs  runtime.rs  scheduler.rs  stats.rs  work.rs
docs/scraper/: phase_0.md  phase_1.md
examples/event-stream-console/: Cargo.toml
examples/event-stream-console/src/: main.rs
examples/explore-with-dummy-bmc/: Cargo.toml
examples/explore-with-reqwest-bmc/: Cargo.toml
examples/readme-minimal/: Cargo.toml
examples/readme-minimal/src/: main.rs
examples/redfish-oem-contoso/: Cargo.toml  build.rs
examples/redfish-std/: Cargo.toml  build.rs
examples/service-root-parser/: Cargo.toml  build.rs
examples/service-root-parser/src/: main.rs
lib/: Cargo.toml
lib/src/: action.rs  bmc.rs  cache.rs  edm_date_time_offset.rs  edm_duration.rs  http.rs  lib.rs  nav_property.rs  odata.rs  odata_id.rs
lib/tests/: etag_cache_tests.rs
redfish/: Cargo.toml  build.rs  features.toml
redfish/schemas/oem/nvidia-bluefield/: NvidiaComputerSystem_v1.xml
redfish/src/: assembly.rs  bmc.rs  bmc_quirks.rs  compiled_schema.rs  control.rs  entity_link.rs  error.rs  ethernet_interface.rs  ethernet_interfaces.rs  hardware_id.rs  host_interface.rs  lib.rs  network_device_function.rs  pcie_device.rs  protocol_features.rs  resource.rs  schema.rs  sensor.rs  sensors.rs  service_root.rs  vendor.rs
redfish/src/account/: collection.rs  item.rs  mod.rs
redfish/src/accounts/: collection.rs  mod.rs  password_policy.rs
redfish/src/chassis/: chassis.rs  item.rs  mod.rs  network_adapter.rs  power.rs  power_supply.rs  thermal.rs
redfish/src/computer_system/: bios.rs  boot_option.rs  drive.rs  item.rs  memory.rs  mod.rs  processor.rs  secure_boot.rs  storage.rs
redfish/src/event_service/: mod.rs  patch.rs
redfish/src/log_service/: mod.rs
redfish/src/log_services/: mod.rs
redfish/src/manager/: item.rs  mod.rs
redfish/src/managers/: manager.rs  mod.rs
redfish/src/oem/: mod.rs
redfish/src/oem/ami/: compiled_schema.rs  config_bmc.rs  mod.rs  schema.rs
redfish/src/oem/dell/: attributes.rs  compiled_schema.rs  mod.rs
redfish/src/oem/hpe/: accounts.rs  compiled_schema.rs  ilo_service_ext.rs  manager.rs  mod.rs
redfish/src/oem/lenovo/: accounts.rs  compiled_schema.rs  computer_system.rs  manager.rs  mod.rs  security_service.rs
redfish/src/oem/liteon/: compiled_schema.rs  mod.rs  power_supply.rs
redfish/src/oem/nvidia/: mod.rs
redfish/src/oem/nvidia/baseboard/: compiled_schema.rs  mod.rs  nvidia_cbc_chassis.rs
redfish/src/oem/nvidia/bluefield/: compiled_schema.rs  mod.rs  nvidia_computer_system.rs  schema.rs
redfish/src/oem/supermicro/: compiled_schema.rs  kcs_interface.rs  manager.rs  mod.rs  sys_lockdown.rs
redfish/src/patch_support/: collection.rs  mod.rs  payload.rs
redfish/src/session_service/: collection.rs  item.rs  mod.rs
redfish/src/systems/: computer_system.rs  drive.rs  memory.rs  mod.rs  processor.rs  storage.rs
redfish/src/telemetry_service/: metric_definition.rs  metric_report.rs  metric_report_definition.rs  mod.rs
redfish/src/update_service/: mod.rs  software_inventory.rs
schema/: Cargo.toml
schema/oem/ami/: AmiManager_v1.xml
schema/oem/dell/: DellAttributes_v1.xml
schema/oem/hpe/: HpeiLO_v1.xml
schema/oem/lenovo/: LenovoComputerSystem_v1.xml  LenovoManager_v1.xml  LenovoSecurityService_v1.xml
schema/oem/liteon/: LiteonPowerSupplyCollection_v1.xml  LiteonPowerSupply_v1.xml
schema/oem/nvidia-bluefield/: NvidiaComputerSystem_v1.xml
schema/oem/supermicro/: KCSInterface_v1.xml  SmcManagerExtensions_v1.xml  SysLockdown_v1.xml
schema/src/: build_helpers.rs  lib.rs  paths.rs
scraper/: Cargo.toml
scraper/src/: generator.rs  ids.rs  lib.rs  output.rs  runtime.rs
tests/: Cargo.toml  build.rs
(+39 files in other folders)
