#

[workspace]
members = [
   "csdl-compiler",
]

[workspace.package]
version = "0.1.0"
license-file = "LICENSE"
repository = "https://github.com/NVIDIA/nv-redfish"
readme = "README.md"
edition = "2018"
keywords = ["rust", "redfish", "bmc"]
categories = ["hardware-support"]
documentation = "TBD"

[workspace.dependencies]
serde = { version = "1.0" }
quick-xml = { version = "0.38" }
tagged-types = { version = "^0.2.3" }
heck = { version = "0.5" }
quote = { version = "1.0" }
prettyplease = { version = "0.2" }
syn = { version = "2.0" }
proc-macro2 = { version = "1.0" }