[package]
name = "nv-redfish-bmc-http"
version.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true

[features]
default = ["reqwest"]

# HTTP client implementations with reqwest
reqwest = ["dep:reqwest"]

[dependencies]
nv-redfish-core = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true, optional = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = [ "serde" ] }
time = { workspace = true, features = [ "serde", "formatting", "parsing" ] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
tokio-test = { workspace = true }
wiremock = { workspace = true }
