[package]
name = "csdl-compiler"
version.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "csdl-compiler-bin"
path = "src/main.rs"

[[bin]]
name = "test-csdl-parser"
path = "tests/test-csdl-parser.rs"

[dependencies]
serde = { workspace = true, features = [ "derive" ]}
quick-xml = { workspace = true, features = ["serialize"] }
tagged-types = { workspace = true }