[package]
name = "csdl-compiler"
version.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "csdl-compiler-bin"
path = "src/main.rs"

[[bin]]
name = "test-csdl-parser"
path = "tests/test-csdl-parser.rs"

[[bin]]
name = "test-schema-compilation"
path = "tests/test-schema-compilation.rs"

[[bin]]
name = "test-schema-rust-gen"
path = "tests/test-schema-rust-gen.rs"

[dependencies]
serde = { workspace = true, features = [ "derive" ]}
heck = { workspace = true }
quick-xml = { workspace = true, features = ["serialize"] }
tagged-types = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
prettyplease = { workspace = true }
syn = { workspace = true }
