[package]
name = "nv-redfish"
version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true

[dependencies]
serde = { workspace = true, featues = [ "derive" ] }