[package]
name = "nv-redfish"
version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true

[features]
default = ["accounts", "events", "chassis", "systems", "update_service", "managers"]
accounts = []
events = []
chassis = ["__log_service"]
systems = ["__log_service"]
update_service = []
managers = ["__log_service"]

# Internal feature, does not make sense on it own
__log_service = []

# OEM features support
oem-lenovo = ["oem"]
oem-hpe = ["oem"]
oem-supermicro = ["oem"]
oem-dell = ["oem"]
oem-ami = ["oem"]
oem-nvidia = ["oem"]
oem = []

[dependencies]
nv-redfish-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[build-dependencies]
csdl-compiler = { workspace = true }