[package]
name = "nv-redfish"
version.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true

[features]
default = []

std-redfish = [
    "accounts",
    "chassis",
    "log-services",
    "managers",
    "power-supplies",
    "sensors",
    "systems",
    "update-service",
]

accounts = []
chassis = []
log-services = []
managers = []
update-service = []
sensors = []
systems = []
power-supplies = []

# OEM features support
oem-lenovo = ["oem"]
oem-hpe = ["oem"]
oem-supermicro = ["oem"]
oem-dell = ["oem"]
oem-ami = ["oem"]
oem-nvidia = ["oem"]
oem = []

[dependencies]
nv-redfish-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[build-dependencies]
csdl-compiler = { workspace = true }