[package]
name = "redfish-oem-contoso"
version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
nv-redfish-core = { workspace = true }

[build-dependencies]
nv-redfish-csdl-compiler = { workspace = true }
nv-redfish-schema = { workspace = true }
