[package]
name = "service-root-parser"
version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
nv-redfish = { path = "../../lib" }

[build-dependencies]
glob = { workspace = true }
csdl-compiler = { path = "../../csdl-compiler" }
